# Visored

./: .gitignore  PANEL_SPLICING_AGENT_SPEC.md  README.md  pyproject.toml  requirements.txt
source/: pyvenv.cfg
source/Scripts/: activate  activate.bat
tests/: test_gutter_segment.py
visored/: VISORED_LOG.md  __init__.py  __main__.py  check_frame_0080.py  check_label_staleness.py  cli.py  crop_screenshots.py  embed.py  eval_recall.py  extract_frames.py  finetune.py  index_config.json  labeler.html  labeler_server.py  mangadex.py  manifest.py  panel_splicer.py  pipeline.py  query.py  rebuild_dataset.py  segment.py  skips.json
visored.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
visored/bleach_panels/Chapter 1/: metadata.json
visored/bleach_panels/Chapter 1 (2)/: metadata.json
visored/clip/: embed.py  finetune.py
visored/dino/: embed_dino.py  eval_recall_full_dino.py  finetune_dino.py  finetune_dino_hardneg.py  labeler.html  labeler_server.py  query_dino.py  search.html  search_server.py
visored/index_L14/: index_config.json
