[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visored"
version = "1.0.0"
description = "Visored: download manga from MangaDex and segment pages into panels with OpenCV."
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9.0",
  "certifi>=2024.0.0",
  "aiolimiter>=1.1.0",
  "numpy>=1.24.0",
  "opencv-python-headless>=4.8.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
visored = "visored.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["visored*"]
